traces/bug_557.txt
examples++-hpddm/hpddm_substructuring.cpp:631: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-hpddm/hpddm_substructuring.cpp:631:1: initialization of callDoLoadInit
629.   }
630.   
631. > LOADFUNC(Init_Substructuring)

examples++-hpddm/hpddm_substructuring.cpp:631:1: call to DoLoadInit
629.   }
630.   
631. > LOADFUNC(Init_Substructuring)

examples++-hpddm/hpddm_substructuring.cpp:631:1: call to addInitFunct
  629.   }
  630.   
  631. > LOADFUNC(Init_Substructuring)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
